Python version/specializations/clingo/parser/ClingoParser.py
# Generated from ClingoParser.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class ClingoParser ( Parser ):

    grammarFileName = "ClingoParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "','", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "START", "ANY", "COMMA", "INTEGER_CONSTANT", 
                      "NEW_LINE", "IDENTIFIER", "STRING_CONSTANT", "TERMS_BEGIN", 
                      "TERMS_END", "WHITE_SPACE" ]

    RULE_answer_set = 0
    RULE_model = 1
    RULE_output = 2
    RULE_predicate_atom = 3
    RULE_term = 4

    ruleNames =  [ "answer_set", "model", "output", "predicate_atom", "term" ]

    EOF = Token.EOF
    START=1
    ANY=2
    COMMA=3
    INTEGER_CONSTANT=4
    NEW_LINE=5
    IDENTIFIER=6
    STRING_CONSTANT=7
    TERMS_BEGIN=8
    TERMS_END=9
    WHITE_SPACE=10

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Answer_setContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START(self):
            return self.getToken(ClingoParser.START, 0)

        def model(self):
            return self.getTypedRuleContext(ClingoParser.ModelContext,0)


        def getRuleIndex(self):
            return ClingoParser.RULE_answer_set

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnswer_set" ):
                return visitor.visitAnswer_set(self)
            else:
                return visitor.visitChildren(self)




    def answer_set(self):

        localctx = ClingoParser.Answer_setContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_answer_set)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 10
            self.match(ClingoParser.START)
            self.state = 11
            self.model()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ModelContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEW_LINE(self):
            return self.getToken(ClingoParser.NEW_LINE, 0)

        def predicate_atom(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClingoParser.Predicate_atomContext)
            else:
                return self.getTypedRuleContext(ClingoParser.Predicate_atomContext,i)


        def getRuleIndex(self):
            return ClingoParser.RULE_model

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModel" ):
                return visitor.visitModel(self)
            else:
                return visitor.visitChildren(self)




    def model(self):

        localctx = ClingoParser.ModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ClingoParser.IDENTIFIER:
                self.state = 13
                self.predicate_atom()
                self.state = 18
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 19
            self.match(ClingoParser.NEW_LINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OutputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def answer_set(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClingoParser.Answer_setContext)
            else:
                return self.getTypedRuleContext(ClingoParser.Answer_setContext,i)


        def getRuleIndex(self):
            return ClingoParser.RULE_output

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutput" ):
                return visitor.visitOutput(self)
            else:
                return visitor.visitChildren(self)




    def output(self):

        localctx = ClingoParser.OutputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_output)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ClingoParser.START:
                self.state = 21
                self.answer_set()
                self.state = 26
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Predicate_atomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ClingoParser.IDENTIFIER, 0)

        def TERMS_BEGIN(self):
            return self.getToken(ClingoParser.TERMS_BEGIN, 0)

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ClingoParser.TermContext)
            else:
                return self.getTypedRuleContext(ClingoParser.TermContext,i)


        def TERMS_END(self):
            return self.getToken(ClingoParser.TERMS_END, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ClingoParser.COMMA)
            else:
                return self.getToken(ClingoParser.COMMA, i)

        def getRuleIndex(self):
            return ClingoParser.RULE_predicate_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPredicate_atom" ):
                return visitor.visitPredicate_atom(self)
            else:
                return visitor.visitChildren(self)




    def predicate_atom(self):

        localctx = ClingoParser.Predicate_atomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_predicate_atom)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(ClingoParser.IDENTIFIER)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ClingoParser.TERMS_BEGIN:
                self.state = 28
                self.match(ClingoParser.TERMS_BEGIN)
                self.state = 29
                self.term()
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ClingoParser.COMMA:
                    self.state = 30
                    self.match(ClingoParser.COMMA)
                    self.state = 31
                    self.term()
                    self.state = 36
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 37
                self.match(ClingoParser.TERMS_END)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(ClingoParser.IDENTIFIER, 0)

        def INTEGER_CONSTANT(self):
            return self.getToken(ClingoParser.INTEGER_CONSTANT, 0)

        def predicate_atom(self):
            return self.getTypedRuleContext(ClingoParser.Predicate_atomContext,0)


        def STRING_CONSTANT(self):
            return self.getToken(ClingoParser.STRING_CONSTANT, 0)

        def getRuleIndex(self):
            return ClingoParser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = ClingoParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_term)
        try:
            self.state = 45
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(ClingoParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 42
                self.match(ClingoParser.INTEGER_CONSTANT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 43
                self.predicate_atom()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 44
                self.match(ClingoParser.STRING_CONSTANT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





